# oeffi

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: check-gtfs-sources.yml  release.yml
assets/: vienna-polygon.json
src/: build.rs  cache.rs  cache_meta.rs  cli.rs  clustering.rs  commands.rs  config.rs  download.rs  main.rs  matcher.rs  merge.rs  route_planner.rs  snapshot.rs
src/geocode/: mod.rs  model.rs  normalize.rs
src/route_planner/: cache.rs  model.rs  output.rs  query.rs  raptor_adapter.rs
