[package]
name = "oeffi"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
gtfs-structures = "0.46.1"
strsim = "0.11"
chrono = "0.4"
raptor = { git = "https://github.com/keogami/raptor-rs" }
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
ureq = { version = "2.10", features = ["tls"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
