[package]
name = "oeffi"
version = "0.1.4"
edition = "2024"
description = "Fast local CLI for Vienna transit routing on GTFS data"
readme = "README.md"
repository = "https://github.com/ilosamos/oeffi"
homepage = "https://github.com/ilosamos/oeffi"
license-file = "LICENSE"
keywords = ["gtfs", "transit", "routing", "vienna", "cli"]
categories = ["command-line-utilities"]
exclude = [
  "data/**",
  "*.cache.bin",
  "target/**",
  ".github/**",
  ".DS_Store",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
gtfs-structures = "0.46.1"
strsim = "0.11"
chrono = "0.4"
raptor = { git = "https://github.com/keogami/raptor-rs" }
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
